updated gitignore, removed output from template
template file called '20170812_his_integration_check.ipynb' and data in
template file

--- a/scripts/templates/20170812_his_integration_check.ipynb
+++ b/scripts/templates/20170812_his_integration_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -11,7 +11,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "base_dir = 'C:\\\\Users\\heine\\github\\PlateReaderTools'\n",
+    "base_dir = 'C:\\\\Users\\heine\\github\\PlateReaderTools'  #You will need to change this depending on which computer you are working on\n",
     "os.chdir(base_dir) \n",
     "\n",
     "#import sys\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -54,7 +54,7 @@
    },
    "outputs": [],
    "source": [
-    "dirname = \"C:\\\\Users\\\\heine\\\\Google Drive\\\\UCSF\\\\ElSamad_Lab\\\\CRISPR iGRNA\\\\experiments\\\\plate_reader\\\\\"\n",
+    "dirname = base_dir + os.path.normpath(\"/scripts/templates\") + os.sep\n",
     "fname = dirname + \"20170812_HIS_integration_growth_20170316_BMH_24h.xlsx\"\n",
     "#date = fname[-13:-5]\n",
     "sheetname = 'Result sheet'\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -77,19 +77,7 @@
    "outputs": [],
    "source": [
     "[d,time_list] = plate_reader_tools.readplate(fname,sheetname, skiprows, rows, columns, datalabels, cycles, horz)\n",
-    "OD_data = d['OD']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
+    "OD_data = d['OD']\n",
     "OD_data"
    ]
   },
@@ -103,8 +91,7 @@
    },
    "outputs": [],
    "source": [
-    "OD_data_filtered, OVER_list = plate_reader_tools.over_filter(OD_data)\n",
-    "\n"
+    "OD_data_filtered, OVER_list = plate_reader_tools.over_filter(OD_data)"
    ]
   },
   {
